# WasmEdge-FFMPEG

./: .gitignore  README.md
.github/workflows/: IWYU_scan.yml  bindings-java.yml  build-extensions.yml  build.yml  build_for_nix.yml  build_for_openwrt.yml  docker.yml  release.yml  reusable-build-on-macos.yml  reusable-build-on-manylinux.yml  reusable-build-on-ubuntu.yml  reusable-build-on-windows.yml  test-install-script.yml  test-python-install-script.yml
plugins/: CMakeLists.txt
plugins/wasmedge_ffmpeg/: CMakeLists.txt  ffmpeg_base.h  ffmpeg_env.cpp  ffmpeg_env.h  ffmpeg_func.cpp  ffmpeg_func.h  ffmpeg_module.cpp  ffmpeg_module.h
